--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "pinia": "^2.0.16",
     "vee-validate": "^4.6.2",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.2"
+    "vue-router": "^4.1.2",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
